--- a/ch2.tex
+++ b/ch2.tex
@@ -1,4 +1,3 @@
-\chapter{面向脉冲星测时阵列的数据分析方法}
-\label{chap:data analysis methods for pta}
-\section{贝叶斯学派}
-\section{频率学派}
+\chapter{连续引力波}
+\label{chap:continuous gravitational wave data analysis methods}
+\section{引力波信号的模型}
