--- a/ch3.tex
+++ b/ch3.tex
@@ -1,3 +1,2 @@
-\chapter{连续引力波信号的数据处理方法}
-\label{chap:continuous gravitational wave data analysis methods}
-\section{引力波信号的模型}
+\chapter{NANOGrav 15 年数据超大质量双黑洞连续引力波搜寻结果}
+\label{chap:nanograv 15 year data search for continuous gravitational waves from supermassive black hole binaries}
