--- a/ch4.tex
+++ b/ch4.tex
@@ -1,2 +1,2 @@
-\chapter{NANOGrav 15 年数据超大质量双黑洞连续引力波搜寻结果}
-\label{chap:nanograv 15 year data search for continuous gravitational waves from supermassive black hole binaries}
+\chapter{利用深度神经网络对空间引力波探测器数据}
+\label{chap:deep learning for space-based gravitational wave detector data}
