--- a/intro.tex
+++ b/intro.tex
@@ -1,7 +1,14 @@
 \chapter{绪论}
 \label{chap:绪论}
 \section{广义相对论}
+
 \section{引力波}
 \section{脉冲星和脉冲星测时}
+asdasd asdnjo asjdfoafj asdkjoasofjo.
+\section{面向脉冲星测时阵列的数据分析方法}
+\label{chap:data analysis methods for pta}
+\subsection{贝叶斯学派}
+asdsad sadasofjhd ajsdjoiashf asdas .
+\subsection{频率学派}
 \section{人工智能在引力波研究中的应用}
 \section{论文的内容与结构安排}
