--- a/main.tex
+++ b/main.tex
@@ -12,21 +12,30 @@
 \date{2025}{7}{1}
 
 \zhabstract{
-    引力波（GWs）是广义相对论预言中时空结构的微小波动，而脉冲星测时阵列（PTAs）则是探测低频引力波（$10^{-9}$ -- $10^{-7}\,\mathrm{Hz}$）的重要工具。在此频段，超大质量双黑洞系统（SMBHBs）是核心的探测对象。它们所释放的强大引力波信号可能会混合在一起，形成一个随机引力波背景（SGWB）。然而，距离较近或质量较大的个别超大质量双黑洞系统发出的连续引力波（CGWs）有望被直接探测到。目前，多个不同的 PTA 组织已经观测到了随机引力波背景的显著证据\cite{agazieNANOGrav15Yr2023b,xuSearchingNanoHertzStochastic2023, antoniadisSecondDataRelease2023e, theinternationalpulsartimingarraycollaborationComparingRecentPTA2023}。随着五百米口径球面射电望远镜（FAST）\cite{nanFIVEHUNDREDMETERAPERTURESPHERICAL2012}和正在建造的平方公里阵列射电望远镜（SKA）\cite{janssenGravitationalWaveAstronomy2015}的发展，我们预期在不久的将来脉冲星数量和测时精度得到大幅提升，届时探测到随机引力波背景之上的独立超大质量双黑洞系统的连续引力波信号将成为可能。
+    引力波（GWs）是广义相对论预言的时空结构的微小波动，它们携带着宇宙中最剧烈天体物理过程的信息。脉冲星测时阵列（PTAs）是探测低频引力波（频率范围为 $10^{-9}$ -- $10^{-7}\,\mathrm{Hz}$）的重要观测手段。在这一频段中，超大质量双黑洞系统（SMBHBs）是最主要的引力波源。这些双黑洞系统在演化过程中持续释放引力波，其中大多数信号会叠加在一起形成一个随机引力波背景（SGWB）。然而，对于那些距离地球较近或质量特别大的个别超大质量双黑洞系统，它们发出的连续引力波（CGWs）信号有望被单独探测到。值得注意的是，近期多个国际脉冲星测时阵列组织已经相继观测到了随机引力波背景的显著证据\cite{agazieNANOGrav15Yr2023b,xuSearchingNanoHertzStochastic2023, antoniadisSecondDataRelease2023b, theinternationalpulsartimingarraycollaborationComparingRecentPTA2023}。这一重大发现标志着引力波天文学进入了一个新的阶段。随着中国的五百米口径球面射电望远镜（FAST）\cite{nanFIVEHUNDREDMETERAPERTURESPHERICAL2012}的持续运行和国际合作的平方公里阵列射电望远镜（SKA）\cite{janssenGravitationalWaveAstronomy2015}的建设推进，我们预期在不久的将来，可观测的脉冲星数量将大幅增加，测时精度也将显著提升。这些技术进步将为我们提供前所未有的机遇，使得在已探测到的随机引力波背景之上，进一步识别和研究独立超大质量双黑洞系统发出的连续引力波信号成为可能。
 
-    本论文提出一种新颖方法，可分辨若干混叠的连续引力波信号。此方法与国际上已有的全局拟合方法 \cite{babakResolvingMultipleSupermassive2012, petiteauResolvingMultipleSupermassive2013}不同，采用了时域逐级扣除法来区分各个连续引力波信号。我们建立了完整的数据处理流水线，验证了该方法的有效性。具体而言，我们模拟了在平方公里阵列（SKA）时期的脉冲星测时阵列，该阵列包含1000颗毫秒脉冲星，测时精度均达到100纳秒。同时，我们还模拟了200个超大质量双黑洞系统发出的连续引力波信号。值得注意的是，先前的方法\cite{babakResolvingMultipleSupermassive2012,petiteauResolvingMultipleSupermassive2013}最多仅能处理由几十颗脉冲星组成的测时阵列和识别十几个具有相同频率的超大质量双黑洞系统，而我们的方法则能处理更大规模的测时阵列和更多的超大质量双黑洞系统。
+    本论文提出了一种创新性的方法，用于分辨和识别多个相互重叠的连续引力波信号。与国际上现有的全局拟合方法\cite{babakResolvingMultipleSupermassive2012, petiteauResolvingMultipleSupermassive2013}不同，我们开发的方法采用了时域逐级扣除的策略，通过逐步识别和移除最强信号的方式来分离不同的连续引力波信号。为了验证该方法的可行性和有效性，我们建立了一套完整的数据处理流水线系统。在验证过程中，我们模拟了未来平方公里阵列（SKA）时期的脉冲星测时阵列数据，该模拟包含了1000颗毫秒脉冲星，每颗脉冲星的测时精度均达到了100纳秒的高精度水平。同时，我们在模拟数据中注入了来自200个不同超大质量双黑洞系统的连续引力波信号。这项工作显著突破了现有方法的局限性——先前的方法\cite{babakResolvingMultipleSupermassive2012,petiteauResolvingMultipleSupermassive2013}仅能处理由几十颗脉冲星组成的测时阵列，且最多只能识别十几个具有相似频率的超大质量双黑洞系统。相比之下，我们的方法在处理更大规模的测时阵列和更多数量的超大质量双黑洞系统方面展现出了明显的优势。
 
-    在接下来的研究中，我们运用了 PINT\cite{luoPINTModernSoftware2021} 脉冲星模拟软件，根据 NANOGrav 提供的15年观测数据\cite{agazieNANOGrav15Yr2023}中的68颗脉冲星实际观测的起止时间，以100纳秒的高斯白噪声、相互关联的红噪声和大致每两周一次的观测频率（引入非均匀采样）为基础，构建了一个逼真的模拟数据集。我们在此模拟数据集中注入了连续引力波信号。数据处理流程成功地从中辨别出了这一信号，并估算了信号源的空间位置和自转频率等重要参数。我们的方法和数据处理流程为未来的脉冲星测时阵列数据分析提供了新的思路和工具。
+    在进一步的研究中，为了更好地模拟真实观测情况，我们利用 PINT\cite{luoPINTModernSoftware2021} 脉冲星模拟软件，基于 NANOGrav 15年观测数据\cite{agazieNANOGrav15Yr2023}中68颗脉冲星的实际观测时间跨度，构建了一个高度逼真的模拟数据集。这个数据集综合考虑了多个关键因素：包括100纳秒量级的高斯白噪声、脉冲星固有的相互关联红噪声，以及模拟实际观测中约每两周一次的非均匀采样模式。在此基础上，我们向数据集中注入了连续引力波信号，并应用我们开发的数据处理流程进行分析。结果表明，该方法不仅成功地从复杂的背景噪声中识别出了注入的信号，而且能够准确估算出信号源的重要物理参数，如天球坐标位置和轨道频率等。这些研究成果为未来实际的脉冲星测时阵列数据分析提供了新的技术路线和分析工具，对推动引力波天文学的发展具有重要意义。
 }
 \zhkeywords{引力波，脉冲星，脉冲星测时阵列，超大质量双黑洞，数据处理}
 
 \enabstract
 {
-    Gravitational waves (GWs) are minute fluctuations in the fabric of spacetime, predicted by the theory of general relativity, and pulsar timing arrays (PTAs) are critical tools for detecting low-frequency gravitational waves (from $10^{-9}$ to $10^{-7}\,\mathrm{Hz}$). Within this frequency band, supermassive black hole binaries (SMBHBs) are the primary targets for detection. The gravitational wave signals they emit can incoherently superpose together, creating a stochastic gravitational wave background (SGWB). However, continuous gravitational wave signals (CGWs) emitted by individual SMBHBs that are either closer or more massive are expected to be directly detectable. To date, several PTAs have already observed significant evidence of the SGWB\cite{agazieNANOGrav15Yr2023b,xuSearchingNanoHertzStochastic2023,antoniadisSecondDataRelease2023e,theinternationalpulsartimingarraycollaborationComparingRecentPTA2023}. With the development of the Five-hundred-meter Aperture Spherical radio Telescope (FAST)\cite{nanFIVEHUNDREDMETERAPERTURESPHERICAL2012} and the Square Kilometre Array (SKA) under construction\cite{janssenGravitationalWaveAstronomy2015}, an increase in the number and timing precision of pulsars is anticipated in the near future. This will likely allow us to detect continuous gravitational wave signals from individual SMBHBs atop the SGWB.
+    Gravitational waves (GWs) are minute fluctuations in the fabric of spacetime, as predicted by the theory of general relativity. Among the various tools developed for detecting low-frequency gravitational waves (in the range of $10^{-9}$ to $10^{-7}\,\mathrm{Hz}$), pulsar timing arrays (PTAs) have emerged as critical instruments. Within this frequency band, supermassive black hole binaries (SMBHBs) are the primary astrophysical sources of gravitational waves. The gravitational wave signals emitted by these binaries can incoherently superpose, forming a stochastic gravitational wave background (SGWB). However, continuous gravitational wave signals (CGWs) from individual SMBHBs, particularly those that are either closer or more massive, are expected to be directly detectable above the SGWB.
+    
+    Recent advancements in PTA observations have yielded significant progress. Several PTAs, including NANOGrav, IPTA, and others, have already reported compelling evidence of the SGWB\cite{agazieNANOGrav15Yr2023b,xuSearchingNanoHertzStochastic2023,antoniadisSecondDataRelease2023b,theinternationalpulsartimingarraycollaborationComparingRecentPTA2023}. These findings underscore the growing capability of PTAs to probe the low-frequency gravitational wave regime. The development of advanced radio telescopes, such as the Five-hundred-meter Aperture Spherical radio Telescope (FAST)\cite{nanFIVEHUNDREDMETERAPERTURESPHERICAL2012} and the upcoming Square Kilometre Array (SKA)\cite{janssenGravitationalWaveAstronomy2015}, is expected to revolutionize PTA capabilities by significantly increasing the number of observable pulsars and improving timing precision. This enhanced sensitivity will likely enable the detection of continuous gravitational wave signals from individual SMBHBs, even in the presence of the SGWB.
+    
+    This dissertation introduces an innovative method for resolving overlapping continuous gravitational wave signals, addressing a critical challenge in PTA data analysis. Unlike previous global fitting methods proposed by \cite{babakResolvingMultipleSupermassive2012, petiteauResolvingMultipleSupermassive2013}, our approach employs a time-domain, step-by-step subtraction technique to disentangle individual CGW signals. To validate this method, we have developed a comprehensive data analysis pipeline and conducted extensive simulations. Specifically, we simulated a pulsar timing array representative of the SKA era, featuring 1000 millisecond pulsars (MSPs) with timing precision of $100\,\mathrm{ns}$ each. Additionally, we generated CGW signals from 200 SMBHBs to test the method's performance. Notably, our approach demonstrates superior capability compared to existing methods, which were limited to handling timing arrays with only a few dozen pulsars and a small number of SMBHBs at the same frequency.
+    
+    To further validate our method, we utilized the PINT\cite{luoPINTModernSoftware2021} pulsar simulation software, leveraging the actual observational start and end times of 68 pulsars from the NANOGrav 15-year dataset\cite{agazieNANOGrav15Yr2023}. We constructed a realistic simulated dataset by incorporating Gaussian white noise at $100\,\mathrm{ns}$, correlated red noise, and an approximately biweekly observational cadence, which introduces uneven sampling. Within this dataset, we injected a CGW signal. The data analysis pipeline successfully identified and characterized the injected signal, accurately estimating key parameters such as the sky location and orbital frequency of the source. These results demonstrate the robustness and effectiveness of our method in handling complex, realistic PTA datasets.
+    
+    The success of this method not only advances our ability to detect and characterize individual SMBHBs but also opens new avenues for studying the population of SMBHBs in the universe. As PTA sensitivity continues to improve, the ability to resolve multiple overlapping CGW signals will become increasingly important for fully realizing the scientific potential of gravitational wave astronomy.
+% Gravitational waves (GWs) are minute fluctuations in the fabric of spacetime, predicted by the theory of general relativity, and pulsar timing arrays (PTAs) are critical tools for detecting low-frequency gravitational waves (from $10^{-9}$ to $10^{-7}\,\mathrm{Hz}$). Within this frequency band, supermassive black hole binaries (SMBHBs) are the primary targets for detection. The gravitational wave signals they emit can incoherently superpose together, creating a stochastic gravitational wave background (SGWB). However, continuous gravitational wave signals (CGWs) emitted by individual SMBHBs that are either closer or more massive are expected to be directly detectable. To date, several PTAs have already observed significant evidence of the SGWB\cite{agazieNANOGrav15Yr2023b,xuSearchingNanoHertzStochastic2023,antoniadisSecondDataRelease2023e,theinternationalpulsartimingarraycollaborationComparingRecentPTA2023}. With the development of the Five-hundred-meter Aperture Spherical radio Telescope (FAST)\cite{nanFIVEHUNDREDMETERAPERTURESPHERICAL2012} and the Square Kilometre Array (SKA) under construction\cite{janssenGravitationalWaveAstronomy2015}, an increase in the number and timing precision of pulsars is anticipated in the near future. This will likely allow us to detect continuous gravitational wave signals from individual SMBHBs atop the SGWB.
 
-This dissertation proposes an novel method for resolving between multiple overlapping continuous gravitational wave signals. This method differs from the global fitting methods previously proposed\cite{babakResolvingMultipleSupermassive2012, petiteauResolvingMultipleSupermassive2013} and instead uses a time-domain, step-by-step subtraction approach to differentiate between continuous gravitational wave signals. We have developed a complete data analysis pipeline and validated the effectiveness of our method on simulated datasets. Specifically, we simulated a pulsar timing array during the SKA era, which includes 1000 millisecond pulsars (MSPs) with timing precision of $100\,\mathrm{ns}$ each. We also simulated CGWs from 200 SMBHBs. Notably, previous methods\cite{babakResolvingMultipleSupermassive2012, petiteauResolvingMultipleSupermassive2013} were only able to handle timing arrays made up of several dozen pulsars and identify a handful of SMBHBs with the same frequency.
+% This dissertation proposes an novel method for resolving between multiple overlapping continuous gravitational wave signals. This method differs from the global fitting methods previously proposed\cite{babakResolvingMultipleSupermassive2012, petiteauResolvingMultipleSupermassive2013} and instead uses a time-domain, step-by-step subtraction approach to differentiate between continuous gravitational wave signals. We have developed a complete data analysis pipeline and validated the effectiveness of our method on simulated datasets. Specifically, we simulated a pulsar timing array during the SKA era, which includes 1000 millisecond pulsars (MSPs) with timing precision of $100\,\mathrm{ns}$ each. We also simulated CGWs from 200 SMBHBs. Notably, previous methods\cite{babakResolvingMultipleSupermassive2012, petiteauResolvingMultipleSupermassive2013} were only able to handle timing arrays made up of several dozen pulsars and identify a handful of SMBHBs with the same frequency.
 
-In subsequent research, we used the PINT\cite{luoPINTModernSoftware2021} pulsar simulation software based on the actual observational start and end times of 68 pulsars provided by NANOGrav 15-year data\cite{agazieNANOGrav15Yr2023}, simulating Gaussian white noise at $100\,\mathrm{ns}$, correlated red noise, and approximately biweekly observational cadence (introducing uneven sampling) to build a realistic simulated dataset. Within this dataset, we injected a CGW. The data analysis pipeline successfully resolved this signal and estimated vital parameters such as the sky location and orbital frequency of the signal source.
+% In subsequent research, we used the PINT\cite{luoPINTModernSoftware2021} pulsar simulation software based on the actual observational start and end times of 68 pulsars provided by NANOGrav 15-year data\cite{agazieNANOGrav15Yr2023}, simulating Gaussian white noise at $100\,\mathrm{ns}$, correlated red noise, and approximately biweekly observational cadence (introducing uneven sampling) to build a realistic simulated dataset. Within this dataset, we injected a CGW. The data analysis pipeline successfully resolved this signal and estimated vital parameters such as the sky location and orbital frequency of the signal source.
 }
 \enkeywords{Gravitational waves, Pulsars, Pulsar timing array, Supermassive black holes, Data analysis}
 
@@ -51,7 +60,7 @@ In subsequent research, we used the PINT\cite{luoPINTModernSoftware2021} pulsar 
 致谢正文。
 \end{ack}
 
-\bibliography{ref}
+\bibliography{/Users/qyq/Desktop/Academy/Publications/PTA_refs}
 
 \appendix
 
